--- a/css/style.css
+++ b/css/style.css
@@ -99,7 +99,7 @@ h6 {
 body {
   width: 100%;
   height: 100vh;
-  background: url(../img/martin-adams-ICFXCD0VBvI-unsplash.jpg) no-repeat;
+  background: url(../img/evening.jpg) no-repeat;
   background-size: 150% 150% !important;
   font-family: "Montserrat", sans-serif;
   -webkit-backdrop-filter: blur(10px);
@@ -121,7 +121,7 @@ body {
   border-radius: 10px;
   width: 90%;
   height: 80%;
-  background: url(../img/martin-adams-ICFXCD0VBvI-unsplash.jpg) no-repeat;
+  background: url(../img/evening.jpg) no-repeat;
   background-size: 100% 100% !important;
   display: -webkit-box;
   display: -ms-flexbox;
