--- a/scss/style.scss
+++ b/scss/style.scss
@@ -9,7 +9,7 @@
 body {
     width: 100%;
     height: 100vh;
-    background: url(../img/martin-adams-ICFXCD0VBvI-unsplash.jpg) no-repeat;
+    background: url(../img/evening.jpg) no-repeat;
     background-size: 150% 150% !important;
     font-family: 'Montserrat', sans-serif;
     backdrop-filter: blur(10px);
@@ -23,7 +23,7 @@ body {
     border-radius: 10px;
     width: 90%;
     height: 80%;
-    background: url(../img/martin-adams-ICFXCD0VBvI-unsplash.jpg) no-repeat;
+    background: url(../img/evening.jpg) no-repeat;
     background-size: 100% 100% !important;
     display: flex;
     position: relative;
