--- a/scss/style.scss
+++ b/scss/style.scss
@@ -315,32 +315,32 @@ body {
     }
 }
 
-@media (max-width: 400px) {
+@media (max-width: 500px) {
     .weather-container {
-        width: 90%;
-        height: 90%;
+        width: 90% !important;
+        height: 90% !important;
         .content-block {
             .content-block-search {
                 input {
                     height: 30px;
-                    font-size: 25px;
-                    padding: 10px 6px;
+                    font-size: 20px;
+                    padding: 5px;
                 }
                 button {
-                    font-size: 25px;
+                    font-size: 20px;
                 }
             }
             .content-block-info {
                 .content-block-info1 {
                     #degree {
-                        font-size: 100px;
+                        font-size: 90px;
                     }
                 }
                 #city {
-                    font-size: 40px;
+                    font-size: 30px;
                 }
                 #info {
-                    margin: 10% 0% 60%;
+                    margin: 8% 0% 60%;
                 }
                 .date {
                     margin-bottom: 10%;
