--- a/css/style.css
+++ b/css/style.css
@@ -390,8 +390,8 @@ body {
 }
 @media (max-width: 500px) {
   .weather-container {
-    width: 90% !important;
-    height: 90% !important;
+    width: 90%;
+    height: 90vh;
   }
   .weather-container .content-block .content-block-search input {
     height: 30px;
