--- a/scss/style.scss
+++ b/scss/style.scss
@@ -351,10 +351,13 @@ body {
             }
         }
         .additional-information-block {
+            h3 {
+                font-size: 25px;
+            }
             .additional-info {
                 span {
-                    font-size: 25px;
-                    margin-top: 25%;
+                    font-size: 20px;
+                    margin-top: 20%;
                 }
             }
         }
